sort.basic.bubble.AlgBubbleSort3.scala.error
Compilation error:
AlgBubbleSort3:18: error: not found: value getNombreValeur
        if (getNombreValeur() == compt){
            ^